entity_macros/tests/ui/attribute/conflicting-field-named-id.stderr
error: Conflicting field with same name
 --> $DIR/conflicting-field-named-id.rs:7:5
  |
7 |     id: usize,
  |     ^^
